Fixed bends; minor UI improvement
Bends now draw at a steeper angle if required. UI now stays centred
without needing to permanently display a scrollbar.

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,21 +8,20 @@
 	src: url("../fonts/GoudyInitialen.ttf");
 }
 
-/*make body element actually cover 100% of window height* /
-body, html {
- /*height: 100%;* /
- padding: 0;
-}*/
 
 html {
-	font-size: 16px;
-	font-family: "medieval", serif;
-	background-image: url("../images/erminesmall.svg");
-	background-color:  #FFFFFF;
-	background-size: 50px;
-	margin: 0;
-	color:#FFFFFF;
-	overflow-y: scroll;
+    font-size: 16px;
+    font-family: "medieval", serif;
+    background-image: url("../images/erminesmall.svg");
+    background-color: #FFFFFF;
+    background-size: 50px;
+    margin: 0;
+    color: #FFFFFF;
+    /*  these two magic lines stop content moving around
+        when a scrollbar appears/disappears
+    */
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
 }
 
 body {
@@ -36,20 +35,19 @@ body, #menuContainer {
 }
 
 #content {
-	min-height:100vh;
-	box-sizing: border-box;
-	padding: 15px 20px 5px 20px;
+    /*  these next two lines make content cover the whole
+        height of the screen without causing an overflow
+        where it wasn't needed
+    */
+    min-height: 100vh;
+    box-sizing: border-box;
+    padding: 15px 20px 5px 20px;
 }
 
 p, li, a {
 	line-height: 1.5;
 	letter-spacing: 1px;
 }
-
-/*p::first-letter {
-	font-family: "mInitial","medieval",serif;
-	font-size: 35px;
-}*/
 
 .console {
 	background-color: #000000;
@@ -282,4 +280,19 @@ svg, div {
 
 .heraldry-charge {
 	stroke-width: 0.3;
+}
+
+#disableBackground {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.7;
+    z-index: 3;
+}
+
+.noOverflow {
+    overflow: hidden;
 }
